src/tests/snapshots/cendol__tests__pp_lexer__adjacent_string_literals_not_combined.snap
---
source: src/tests/pp_lexer.rs
assertion_line: 137
expression: tokens
---
- kind:
    StringLiteral: "\"hello\""
  flags: ""
  text: "\"hello\""
- kind:
    StringLiteral: "\"world\""
  flags: LEADING_SPACE
  text: "\"world\""
