src/tests/snapshots/cendol__tests__pp_lexer__all_punctuation_tokens.snap
---
source: src/tests/pp_lexer.rs
expression: tokens
---
- kind: Plus
  text: +
  flags: PPTokenFlags(0x0)
- kind: Minus
  text: "-"
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Star
  text: "*"
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Slash
  text: /
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Percent
  text: "%"
  flags: PPTokenFlags(LEADING_SPACE)
- kind: And
  text: "&"
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Or
  text: "|"
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Xor
  text: ^
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Not
  text: "!"
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Tilde
  text: "~"
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Less
  text: "<"
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Greater
  text: ">"
  flags: PPTokenFlags(LEADING_SPACE)
- kind: LessEqual
  text: "<="
  flags: PPTokenFlags(LEADING_SPACE)
- kind: GreaterEqual
  text: ">="
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Equal
  text: "=="
  flags: PPTokenFlags(LEADING_SPACE)
- kind: NotEqual
  text: "!="
  flags: PPTokenFlags(LEADING_SPACE)
- kind: LeftShift
  text: "<<"
  flags: PPTokenFlags(LEADING_SPACE)
- kind: RightShift
  text: ">>"
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Assign
  text: "="
  flags: PPTokenFlags(LEADING_SPACE)
- kind: PlusAssign
  text: +=
  flags: PPTokenFlags(LEADING_SPACE)
- kind: MinusAssign
  text: "-="
  flags: PPTokenFlags(LEADING_SPACE)
- kind: StarAssign
  text: "*="
  flags: PPTokenFlags(LEADING_SPACE)
- kind: DivAssign
  text: /=
  flags: PPTokenFlags(LEADING_SPACE)
- kind: ModAssign
  text: "%="
  flags: PPTokenFlags(LEADING_SPACE)
- kind: AndAssign
  text: "&="
  flags: PPTokenFlags(LEADING_SPACE)
- kind: OrAssign
  text: "|="
  flags: PPTokenFlags(LEADING_SPACE)
- kind: XorAssign
  text: ^=
  flags: PPTokenFlags(LEADING_SPACE)
- kind: LeftShiftAssign
  text: "<<="
  flags: PPTokenFlags(LEADING_SPACE)
- kind: RightShiftAssign
  text: ">>="
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Increment
  text: ++
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Decrement
  text: "--"
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Arrow
  text: "->"
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Dot
  text: "."
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Question
  text: "?"
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Colon
  text: ":"
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Comma
  text: ","
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Semicolon
  text: ;
  flags: PPTokenFlags(LEADING_SPACE)
- kind: LeftParen
  text: (
  flags: PPTokenFlags(LEADING_SPACE)
- kind: RightParen
  text: )
  flags: PPTokenFlags(LEADING_SPACE)
- kind: LeftBracket
  text: "["
  flags: PPTokenFlags(LEADING_SPACE)
- kind: RightBracket
  text: "]"
  flags: PPTokenFlags(LEADING_SPACE)
- kind: LeftBrace
  text: "{"
  flags: PPTokenFlags(LEADING_SPACE)
- kind: RightBrace
  text: "}"
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Ellipsis
  text: "..."
  flags: PPTokenFlags(LEADING_SPACE)
- kind: LogicAnd
  text: "&&"
  flags: PPTokenFlags(LEADING_SPACE)
- kind: LogicOr
  text: "||"
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Hash
  text: "#"
  flags: PPTokenFlags(LEADING_SPACE | STARTS_PP_LINE)
- kind: HashHash
  text: "##"
  flags: PPTokenFlags(LEADING_SPACE)
- kind: Eod
  text: ""
  flags: PPTokenFlags(0x0)
