src/tests/snapshots/cendol__tests__pp_lexer__bmp_unicode_string_literals.snap
---
source: src/tests/pp_lexer.rs
expression: tokens
---
- kind: StringLiteral
  text: "L\"hello$$你好¢¢世界€€world\""
  flags: PPTokenFlags(0x0)
