src/tests/snapshots/cendol__tests__pp_lexer__consecutive_splices.snap
---
source: src/tests/pp_lexer.rs
expression: tokens
---
"A\\\n\\\nB":
  - kind: Identifier
    text: AB
    flags: PPTokenFlags(0x0)
"A\\\r\n\\\r\nB":
  - kind: Identifier
    text: AB
    flags: PPTokenFlags(0x0)
