src/tests/snapshots/cendol__tests__pp_lexer__eod_at_eof_in_directive.snap
---
source: src/tests/pp_lexer.rs
expression: tokens
---
- kind: Hash
  text: "#"
  flags:
    - STARTS_PP_LINE
- kind: Identifier
  text: define
- kind: Identifier
  text: x
  flags:
    - LEADING_SPACE
- kind: Number
  text: "1"
  flags:
    - LEADING_SPACE
- kind: Eod
  text: ""
